# concurrency-patterns

active-object/: CMakeLists.txt
active-object/include/: ActiveObject.hpp
active-object/src/: ActiveObject.cpp  main.cpp
balking/: CMakeLists.txt
balking/include/: Balker.hpp
balking/src/: Balker.cpp  main.cpp
barrier/: CMakeLists.txt
barrier/include/: Barrier.hpp  parallel_normalize.hpp
barrier/src/: main.cpp  parallel_normalize.cpp
guarded-suspension/: CMakeLists.txt  build.sh
guarded-suspension/include/: SuspendedQueue.hpp
guarded-suspension/src/: main.cpp
monitor/: CMakeLists.txt
monitor/include/: Monitor.hpp
monitor/src/: main.cpp
readers-writers-lock/include/: ReaderWriter.hpp
readers-writers-lock/src/: main.cpp
